--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<version>6.11.0</version>
 		</dependency>
 		<dependency>
+  <groupId>com.google.cloud</groupId>
+  <artifactId>google-cloud-firestore</artifactId>
+  <version>3.2.0</version>
+</dependency>
+		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.9.4</version>
